@@ -1,4 +1,4 @@
 include_HEADERS = lmmin.h lmcurve.h
 lib_LTLIBRARIES = liblmmin.la
 liblmmin_la_SOURCES = lmmin.c lmmin.h lmcurve.c lmcurve.h
-liblmmin_la_LDFLAGS = -version-info $(VERSION)
+liblmmin_la_LDFLAGS = -lm -version-info $(VERSION)
